--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -35,6 +35,7 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@main
+      with:
         fetch-depth: 0
 
     - name: cache
