--- a/.github/workflows/lede-builder.yml
+++ b/.github/workflows/lede-builder.yml
@@ -10,17 +10,17 @@
 # See /LICENSE for more information.
 #
 
-name: OpenWrt Builder-lede
+name: OpenWrt Builder-Lienol
 
 on:
   repository_dispatch:
   workflow_dispatch:
 
 env:
-  REPO_URL: https://github.com/lztxi/lede
-  REPO_BRANCH: 5.15
+  REPO_URL: https://github.com/Lienol/openwrt
+  REPO_BRANCH: employ
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: .config
+  CONFIG_FILE: .config_Lienol
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
   UPLOAD_BIN_DIR: false
