--- a/.github/workflows/xwrt-builder.yml
+++ b/.github/workflows/xwrt-builder.yml
@@ -10,7 +10,7 @@
 # See /LICENSE for more information.
 #
 
-name: OpenWrt Builder-Lienol
+name: OpenWrt Builder-x-wrt
 
 on:
   repository_dispatch:
