--- a/.github/workflows/Lienol-builder.yml
+++ b/.github/workflows/Lienol-builder.yml
@@ -17,7 +17,7 @@ on:
   workflow_dispatch:
 
 env:
-  REPO_URL: https://github.com/Lienol/openwrt
+  REPO_URL: https://github.com/lztxi/Lienol
   REPO_BRANCH: 23.05
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: .config_Lienol
