--- a/.github/workflows/imm-builder.yml
+++ b/.github/workflows/imm-builder.yml
@@ -10,17 +10,17 @@
 # See /LICENSE for more information.
 #
 
-name: OpenWrt Builder-immortalwrt
+name: OpenWrt Builder-immortalwrt-k5.4
 
 on:
   repository_dispatch:
   workflow_dispatch:
 
 env:
-  REPO_URL: https://github.com/immortalwrt/immortalwrt
-  REPO_BRANCH: master
+  REPO_URL: https://github.com/lztxi/immortalwrt
+  REPO_BRANCH: openwrt-18.06-k5.4
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: .config_imm
+  CONFIG_FILE: .config_immjj
   DIY_P1_SH: diy-part3.sh
   DIY_P2_SH: diy-part2.sh
   UPLOAD_BIN_DIR: false
