--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -18,7 +18,7 @@ on:
 
 env:
   REPO_URL: https://github.com/lztxi/lede
-  REPO_BRANCH: AX6S
+  REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: .config5.15
   DIY_P1_SH: diy-part1.sh
